syntax = "proto3";

option go_package = "github.com/s7techlab/cckit/examples/token/service/balance";
package examples.erc20_service.service.balance;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "mwitkow/go-proto-validators/validator.proto";

// Balance
service BalanceService {
  // Returns the amount of tokens owned by account.
  rpc GetBalance (GetBalanceRequest) returns (Balance) {
    option (google.api.http) = {
      get: "/token/balances/{address}/{token}"
    };
  }

  rpc ListBalances (google.protobuf.Empty) returns (Balances) {
    option (google.api.http) = {
      get: "/token/balances"
    };
  }

  rpc ListAddressBalances (ListAddressBalancesRequest) returns (Balances) {
    option (google.api.http) = {
      get: "/token/balances/{address}"
    };
  }

  // Moves amount tokens from the callerâ€™s account to recipient.
  // Returns transfer details
  rpc Transfer (TransferRequest) returns (TransferResponse) {
    option (google.api.http) = {
      post: "/token/transfer"
      body: "*"
    };
  }
}

message GetBalanceRequest {
  string address = 1 [(validator.field) = {string_not_empty : true}];
  repeated string token = 2;
}

message ListAddressBalancesRequest {
  string address = 1 [(validator.field) = {string_not_empty : true}];
}

message TransferRequest  {
  string recipient_address = 1 [(validator.field) = {string_not_empty : true}];
  repeated string token = 2;
  uint64 amount = 3 [(validator.field) = {int_gt: 0}];
  repeated AddMetaRequest meta = 4;
}

message TransferResponse {
  string sender_address = 1;
  string recipient_address = 2;
  repeated string token = 3;
  uint64 amount = 4;
  repeated Meta meta = 5;
}

// Balance identifier
message BalanceId {
  string address = 1;
  repeated string token = 2;
}

// Balance
message Balance {
  string  address = 1;
  repeated string token = 2;
  uint64 amount = 3;
}

// List
message Balances {
  repeated Balance items = 1;
}

enum BalanceOperationType {
  BALANCE_OPERATION_UNKNOWN = 0;
  BALANCE_OPERATION_SET = 1;
  BALANCE_OPERATION_ADD = 2;
  BALANCE_OPERATION_SUB = 3;
  BALANCE_OPERATION_TRANSFER = 4;
}

message BalanceOperation {
  string sender_address = 1;
  string recipient_address = 2;
  repeated string token = 3;
  uint64 amount = 4;
}

// Transferred event is emitted when Transfer method has been invoked
message Transferred  {
  string sender_address = 1;
  string recipient_address = 2;
  repeated string token = 3;
  uint64 amount = 4;
  repeated Meta meta = 5;
}

message AddMetaRequest {
  string key = 1 [(validator.field) = {string_not_empty : true}];
  string value = 2 [(validator.field) = {string_not_empty : true}];
}

message Meta {
  string key = 1;
  string value = 2;
}